# chat2chart

./: .env.sample  pyproject.toml  requirement.txt  sl_d1.py
tests/: test_csv_langchain.ipynb
text2chart/: azure_agent.py  resp_common.py
