[tool.poetry]
name = "text2chart"
version = "0.1.0"
description = ""
authors = ["Hi Yen Wong <robinwong51@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
langchain = "^0.1.7"
watchdog = "^4.0.0"
streamlit-echarts = "^0.4.0"
tabulate = "^0.9.0"
python-dotenv = "^1.0.1"
langchain-experimental = "^0.0.52"
openai = "^1.12.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
